# scrapy

./: Cargo.toml
chromedriver/: .gitignore  link.txt
scrapy/: Cargo.toml
scrapy/src/: lib.rs  main.rs
scrapy/src/crawler/: config.rs  crawler_builder.rs  mod.rs  processor.rs  scraper.rs  url_processor.rs
scrapy/src/traits/: from_html.rs  mod.rs  spider.rs
scrapy_examples/: Cargo.toml
scrapy_examples/src/: error.rs  main.rs
scrapy_examples/src/spiders/: mod.rs
scrapy_examples/src/spiders/books_spider/: item.rs  mod.rs  spider.rs
scrapy_examples/src/spiders/hacker_news/: mod.rs
scrapy_examples/src/spiders/quote_spider/: item.rs  mod.rs  spider.rs
scrapy_examples/src/spiders/web_reviews/: mod.rs  spider.rs
