[package]
name = "scrapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
env_logger = "0.10.0"
futures = "0.3.29"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
scraper = "0.18.1"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
