[package]
name = "scrapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
