[package]
name = "scrapy_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrapy = { path = "../scrapy" }

async-trait = "0.1.74"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
scraper = "0.18.1"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
thirtyfour = "0.31.0"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
futures = "0.3.29"
chrono = { version = "0.4.31", features = ["serde"] }
